--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Comercial Palermo - Login</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="frontend/styles.css">
 </head>
 <body>
   <div class="container">
@@ -19,11 +19,11 @@
       </form>
 
       <div class="links">
-        <p>¿No tienes cuenta? <a href="register.html">Regístrate aquí</a></p>
+        <p>¿No tienes cuenta? <a href="frontend/register.html">Regístrate aquí</a></p>
       </div>
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="frontend/script.js"></script>
 </body>
 </html>
