--- a/frontend/pago.html
+++ b/frontend/pago.html
@@ -5,20 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Método de Pago - Comercial Palermo</title>
   <link rel="stylesheet" href="styles.css">
+  <!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+<script>
+
+// firebase.js
+const firebaseConfig = {
+  apiKey: "AIzaSyBXuUQeBNWcqtQ9O26_cQquQAJ7gTQuQvs",
+  authDomain: "comercialpalermo-fcc0d.firebaseapp.com",
+  projectId: "comercialpalermo-fcc0d",
+  storageBucket: "comercialpalermo-fcc0d.appspot.com",
+  messagingSenderId: "173867339544",
+  appId: "1:173867339544:web:YOUR_APP_ID" // Este campo es opcional para el funcionamiento básico, pero recomendado
+};
+
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+const db = firebase.firestore();
+
+
+</script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <div class="payment-container">
-    <h2>ApplianceShop</h2>
-    <h3>Payment Details</h3>
+    <h2>Comercial Palermo</h2>
+    <h3>Detalles de Pago</h3>
     <form id="paymentForm">
       <div class="form-group">
-        <label>Card Number</label>
+        <label>Número de Tarjeta</label>
         <input type="text" placeholder="1234 5678 9012 3456" required>
       </div>
       <div class="form-row">
         <div class="form-group">
-          <label>Expiry Date</label>
+          <label>Fecha de Expiración</label>
           <input type="text" placeholder="MM/YY" required>
         </div>
         <div class="form-group">
@@ -27,21 +49,21 @@
         </div>
       </div>
       <div class="form-group">
-        <label>Billing Address</label>
-        <input type="text" placeholder="123 Main St, City, Country" required>
+        <label>Dirección de Facturación</label>
+        <input type="text" placeholder="123 Calle Principal, Ciudad, País" required>
       </div>
       <div class="summary">
-        <h3>Summary</h3>
+        <h3>Resumen</h3>
         <div class="summary-row">
-          <span>Items Total</span>
+          <span>Total de Artículos</span>
           <span id="itemsTotal">$0.00</span>
         </div>
         <div class="summary-row">
-          <span>Taxes</span>
+          <span>Impuestos</span>
           <span id="taxes">$0.00</span>
         </div>
         <div class="summary-row">
-          <span>Discount</span>
+          <span>Descuento</span>
           <span id="discount">-$0.00</span>
         </div>
         <div class="summary-row total">
@@ -49,10 +71,9 @@
           <span id="total">$0.00</span>
         </div>
       </div>
-      <button type="submit" class="confirm-button">Confirm Payment</button>
+      <button type="submit" class="confirm-button">Confirmar Pago</button>
     </form>
   </div>
-  <!-- Barra de navegación inferior -->
   <nav class="bottom-nav">
     <a href="dashboard.html"><i class="fas fa-home"></i><span>Inicio</span></a>
     <a href="buscar.html"><i class="fas fa-search"></i><span>Buscar</span></a>
